{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 123,
  "lineage": "d2246356-dca0-8f11-6915-5c8b5c6c31e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_sg_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-4143653401",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fbd1180668ae6892",
            "security_group_rule_id": "sgr-0680f6045112a8a38",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.eks_master_role",
            "aws_iam_role_policy_attachment.eks_cluster_cluster",
            "aws_iam_role_policy_attachment.eks_cluster_service",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a756bed9461f6e4",
            "association_id": "eipassoc-00f3f41f0416812d6",
            "domain": "vpc",
            "id": "eipalloc-08a756bed9461f6e4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ce9d6a5918e38a41",
            "private_dns": "ip-10-51-0-117.ec2.internal",
            "private_ip": "10.51.0.117",
            "public_dns": "ec2-52-3-139-58.compute-1.amazonaws.com",
            "public_ip": "52.3.139.58",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIPVpc"
            },
            "tags_all": {
              "Name": "EIPVpc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061a829c565fe1576",
            "association_id": "eipassoc-01bca880995eaac4d",
            "domain": "vpc",
            "id": "eipalloc-061a829c565fe1576",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00b084ba53fb44086",
            "private_dns": "ip-10-51-1-105.ec2.internal",
            "private_ip": "10.51.1.105",
            "public_dns": "ec2-44-217-163-66.compute-1.amazonaws.com",
            "public_ip": "44.217.163.66",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIPVpc"
            },
            "tags_all": {
              "Name": "EIPVpc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-071b58758cebe354c",
            "association_id": "eipassoc-0d29c7b2c73574490",
            "domain": "vpc",
            "id": "eipalloc-071b58758cebe354c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0db6ed4b8551067be",
            "private_dns": "ip-10-51-2-78.ec2.internal",
            "private_ip": "10.51.2.78",
            "public_dns": "ec2-18-207-90-237.compute-1.amazonaws.com",
            "public_ip": "18.207.90.237",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIPVpc"
            },
            "tags_all": {
              "Name": "EIPVpc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743625559892:internet-gateway/igw-01a133154029df6da",
            "id": "igw-01a133154029df6da",
            "owner_id": "743625559892",
            "tags": {
              "Name": "MainIGW"
            },
            "tags_all": {
              "Name": "MainIGW"
            },
            "vpc_id": "vpc-032dcd281f6d54df3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a756bed9461f6e4",
            "association_id": "eipassoc-00f3f41f0416812d6",
            "connectivity_type": "public",
            "id": "nat-0c6296c091556bdf5",
            "network_interface_id": "eni-0ce9d6a5918e38a41",
            "private_ip": "10.51.0.117",
            "public_ip": "52.3.139.58",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03ddf30ee2ca47a4e",
            "tags": {
              "Name": "MainNATGateway"
            },
            "tags_all": {
              "Name": "MainNATGateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061a829c565fe1576",
            "association_id": "eipassoc-01bca880995eaac4d",
            "connectivity_type": "public",
            "id": "nat-072ab155d8d6e86bb",
            "network_interface_id": "eni-00b084ba53fb44086",
            "private_ip": "10.51.1.105",
            "public_ip": "44.217.163.66",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e8af31698ff3308d",
            "tags": {
              "Name": "MainNATGateway"
            },
            "tags_all": {
              "Name": "MainNATGateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-071b58758cebe354c",
            "association_id": "eipassoc-0d29c7b2c73574490",
            "connectivity_type": "public",
            "id": "nat-0debc6bf8fdd13610",
            "network_interface_id": "eni-0db6ed4b8551067be",
            "private_ip": "10.51.2.78",
            "public_ip": "18.207.90.237",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09d9f1b9f5ffae79e",
            "tags": {
              "Name": "MainNATGateway"
            },
            "tags_all": {
              "Name": "MainNATGateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743625559892:route-table/rtb-0663cd4ec8e89166f",
            "id": "rtb-0663cd4ec8e89166f",
            "owner_id": "743625559892",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a133154029df6da",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MainIGW"
            },
            "tags_all": {
              "Name": "MainIGW"
            },
            "timeouts": null,
            "vpc_id": "vpc-032dcd281f6d54df3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743625559892:route-table/rtb-0d65b7876bfdc58bc",
            "id": "rtb-0d65b7876bfdc58bc",
            "owner_id": "743625559892",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a133154029df6da",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MainIGW"
            },
            "tags_all": {
              "Name": "MainIGW"
            },
            "timeouts": null,
            "vpc_id": "vpc-032dcd281f6d54df3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743625559892:route-table/rtb-035b45e04a3c4136d",
            "id": "rtb-035b45e04a3c4136d",
            "owner_id": "743625559892",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a133154029df6da",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MainIGW"
            },
            "tags_all": {
              "Name": "MainIGW"
            },
            "timeouts": null,
            "vpc_id": "vpc-032dcd281f6d54df3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743625559892:route-table/rtb-06b8e1632517594f0",
            "id": "rtb-06b8e1632517594f0",
            "owner_id": "743625559892",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c6296c091556bdf5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MainNATGateway"
            },
            "tags_all": {
              "Name": "MainNATGateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-032dcd281f6d54df3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743625559892:route-table/rtb-01398579434c9e797",
            "id": "rtb-01398579434c9e797",
            "owner_id": "743625559892",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-072ab155d8d6e86bb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MainNATGateway"
            },
            "tags_all": {
              "Name": "MainNATGateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-032dcd281f6d54df3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743625559892:route-table/rtb-0bc06111463ccc026",
            "id": "rtb-0bc06111463ccc026",
            "owner_id": "743625559892",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0debc6bf8fdd13610",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MainNATGateway"
            },
            "tags_all": {
              "Name": "MainNATGateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-032dcd281f6d54df3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5e9338f6468dfe4",
            "route_table_id": "rtb-0663cd4ec8e89166f",
            "subnet_id": "subnet-03ddf30ee2ca47a4e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0126cda1b10dd5a1d",
            "route_table_id": "rtb-0d65b7876bfdc58bc",
            "subnet_id": "subnet-0e8af31698ff3308d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082e8dd3bc8d34ea6",
            "route_table_id": "rtb-035b45e04a3c4136d",
            "subnet_id": "subnet-09d9f1b9f5ffae79e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fcb2d7395787d5d",
            "route_table_id": "rtb-06b8e1632517594f0",
            "subnet_id": "subnet-06efbccab89ab7d19"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.nat",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.random_shuffle.public_az"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f84bce1353d155e",
            "route_table_id": "rtb-01398579434c9e797",
            "subnet_id": "subnet-058f4904fc9ec471c"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.nat",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.random_shuffle.public_az"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022431d9dd41c3c47",
            "route_table_id": "rtb-0bc06111463ccc026",
            "subnet_id": "subnet-0326689a1f3b7674d"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.nat",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.random_shuffle.public_az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743625559892:subnet/subnet-06efbccab89ab7d19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.51.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06efbccab89ab7d19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "743625559892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AccessMode": "PRIVATE",
              "kubernetes.io/cluster/eks-multi-az": "owned"
            },
            "tags_all": {
              "AccessMode": "PRIVATE",
              "kubernetes.io/cluster/eks-multi-az": "owned"
            },
            "vpc_id": "vpc-032dcd281f6d54df3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743625559892:subnet/subnet-058f4904fc9ec471c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.51.16.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058f4904fc9ec471c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "743625559892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AccessMode": "PRIVATE",
              "kubernetes.io/cluster/eks-multi-az": "owned"
            },
            "tags_all": {
              "AccessMode": "PRIVATE",
              "kubernetes.io/cluster/eks-multi-az": "owned"
            },
            "vpc_id": "vpc-032dcd281f6d54df3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743625559892:subnet/subnet-0326689a1f3b7674d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.51.24.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0326689a1f3b7674d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "743625559892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AccessMode": "PRIVATE",
              "kubernetes.io/cluster/eks-multi-az": "owned"
            },
            "tags_all": {
              "AccessMode": "PRIVATE",
              "kubernetes.io/cluster/eks-multi-az": "owned"
            },
            "vpc_id": "vpc-032dcd281f6d54df3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743625559892:subnet/subnet-03ddf30ee2ca47a4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.51.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ddf30ee2ca47a4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "743625559892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AccessMode": "PUBLIC",
              "kubernetes.io/cluster/eks-multi-az": "owned"
            },
            "tags_all": {
              "AccessMode": "PUBLIC",
              "kubernetes.io/cluster/eks-multi-az": "owned"
            },
            "vpc_id": "vpc-032dcd281f6d54df3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743625559892:subnet/subnet-0e8af31698ff3308d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.51.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8af31698ff3308d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "743625559892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AccessMode": "PUBLIC",
              "kubernetes.io/cluster/eks-multi-az": "owned"
            },
            "tags_all": {
              "AccessMode": "PUBLIC",
              "kubernetes.io/cluster/eks-multi-az": "owned"
            },
            "vpc_id": "vpc-032dcd281f6d54df3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743625559892:subnet/subnet-09d9f1b9f5ffae79e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.51.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d9f1b9f5ffae79e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "743625559892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AccessMode": "PUBLIC",
              "kubernetes.io/cluster/eks-multi-az": "owned"
            },
            "tags_all": {
              "AccessMode": "PUBLIC",
              "kubernetes.io/cluster/eks-multi-az": "owned"
            },
            "vpc_id": "vpc-032dcd281f6d54df3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:743625559892:vpc/vpc-032dcd281f6d54df3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.51.0.0/16",
            "default_network_acl_id": "acl-0a20a2c83bae8473b",
            "default_route_table_id": "rtb-0d0575f0411f893d6",
            "default_security_group_id": "sg-0272207757885ac3d",
            "dhcp_options_id": "dopt-0f58c902535f8a186",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-032dcd281f6d54df3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d0575f0411f893d6",
            "owner_id": "743625559892",
            "tags": {
              "Name": "MainVPC",
              "kubernetes.io/cluster/eks-multi-az": "owned"
            },
            "tags_all": {
              "Name": "MainVPC",
              "kubernetes.io/cluster/eks-multi-az": "owned"
            }
          }
        }
      ]
    }
  ]
}